- Update Bootstrap von Version 4.0.0 auf Version 4.1.2
- Update momentjs auf Version 0.5.17
- Update auf datatables Version 1.10.19
- Integration von fontawesome Version 5
- Option zum Aktivieren/Deaktivieren Export-Funktion von Highcharts deaktiviert (settings.php -> $useHighchartExport)

geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
  - ../changelog.txt
  - ./assets/css/userstats_layout.css
  - ./assets/js/moment/moment-timezone-with-data-2012-2022.js
  - ./assets/js/moment/moment-with-locales.min.js
  - ./settings/settings.php
  - ajax_wcg_detail.php
  - check_update.php
  - header.php
  - index.php
  - nav.php
  - pendings.php
  - project.php
  - tasks.php
  - version.php (erst mit Release)




Version 5.1.1: 
==============
- Es wurde ein Fehler beim Anzeigen der Error-Seiten behoben. Nun sollten auch die richtigen Meldungen erscheinen, sofern ein falscher Link direkt aufgerufen werden sollte
- Das Link für weitere Infos in der Navbar wurde nun besser positioniert
- Der Link zu den SG-Stats wurde aktualisiert
- Je nach Projekt-Status werden in den Projekt-Details nun mehr oder weniger Angaben zu den errechneten Punkten ausgegeben.


geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
    - ../changelog.txt
    - ./settings/settings.php
    - ./assets/css/userstats_layout.css
    - error.php
    - index.php
    - project.php
    - nav.php
    - project.php
    - version.php



Version 5.1.0: 
==============
- Das Error-Management für neue Nutzer der BOINC-Userstats wurde verbessert (Issue #21)
  Sofern noch keine Änderungen an den Credits bei den Projekten vorhanden waren, wurde lediglich der Header und Footer angezeigt.
  Nun sollte die Tabelle angezeigt werden und ein Hinweis in den Charts erfolgen, wenn noch keine Daten zum Anzeigen vorhanden sind.
- Integration einer Update-Prüfung