@@ -187,7 +187,7 @@ table.dataTable {
 	border: 1px solid rgba(14, 62, 124, 0.863);
 	border-left: 11px solid transparent;
 	border-right: 11px solid transparent;
-  }
+ }
 
 .tooltip-top > .tooltip-arrow {
 	color: 5px solid rgba(14, 62, 124, 0.863);
